# FileHandling

./: .gitignore  LICENSE  README.md  main.py  setup.cfg  test.py
docs/: docs.html  features.html  index.html  javasciptdocs.html  pythondocs.html  style.css  whatsnew.html
docs/source/: conf.py
src/EasyFileHandling/: __init__.py  imagehandler.py  json.py  jsonHandler.py  main.py
src/EasyFileHandling.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/EasyFileHandling/beta/: main.py
src/EasyFileHandling/errors/: error.py
src/EasyFileHandling/tests/: test_filehandler.py
src/EasyFileHandlingCode/: main.py
