[metadata]
name = EasyFileHandling
version = 1.0.2
author = Haider Ali
author_email = ali075398@gmail.com
description = A simple and useful package for File Handling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ProjectsWithPython/FileHandling
project_urls =
    Bug Tracker = https://github.com/ProjectsWithPython/ProjectsIssues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src